# python-jack-knife

./: .gitignore  CHANGELOG.md  Makefile  README.md  foo.sh  myfunc.py  postgres.py  pyproject.toml  requirements.txt  setup.py  user_pipe.py
djk/: base.py  common.py  log.py  main.py  man_page.py  parser.py  registry.py  version.py
djk/pipes/: add_field.py  common.py  denorm.py  factory.py  filter.py  grep.py  group.py  head.py  join.py  let.py  let_reduce.py  map.py  move_field.py  postgres_pipe.py  pyfunc.py  remove_field.py  select.py  sort.py  subexp.py  subexp_over.py  tail.py  user_pipe_factory.py  where.py
djk/sinks/: csv.py  csv_sink.py  ddb.py  devnull.py  dir_sink.py  expect.py  factory.py  graph.py  graph_bar_line.py  graph_cumulative.py  graph_hist.py  graph_scatter.py  json_sink.py  s3_sink.py  sinks.py  stdout.py  tsv.py  tsv_sink.py  user_sink_factory.py
djk/sources/: csv_source.py  dir_source.py  factory.py  format_usage.py  inline_source.py  json_source.py  (+9 more)
pjk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
shell_tests/: all.sh  format_tests.sh  map_join.sh  map_join_errors.sh  map_let_reduce.sh  pipe_tests.sh  reduction.sh  sink_tests.sh  usage_errors.sh
test/: basic_test.py  inline_source_test.py  simple_tests.sh  token_usage_test.py  user_source_test.py
tests/: basic_test.py  conftest.py  example_man_test.py  inline_source_test.py  join_test.py  local_source_sink_test.py  s3_sink_test.py  s3_source_test.py  subexp_test.py  token_usage_test.py  user_source_test.py
tools/: bump_version.py  create_configs_template.py  move_imports.py
(+86 files in other folders)
